# rust-programming-homework

./: .gitignore  Cargo.toml  README.md
hw1/: Cargo.toml  README.md
hw1/src/: main.rs
hw2/: Cargo.toml  README.md
hw2-cli/: Cargo.toml
hw2-cli/src/: main.rs
hw2/src/: lib.rs
hw2/tests/: random.rs
hw3/: Cargo.toml  README.md
hw3/src/: lib.rs  main.rs
